--- a/index.html
+++ b/index.html
@@ -1,67 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flores Amarillas para ti</title>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #fffbf0;
-            color: #4b4b4b;
-            text-align: center;
-            margin: 0;
-            padding: 0;
-
-        }
-        header {
-            background-color: #f7c600;
-            padding: 20px 0;
-        }
-        h1 {
-            color: #fff;
-            font-size: 36px;
-        }
-        .flowers {
-            background-image: url('https://www.sorprendelima.pe/cdn/shop/articles/MAY3373_550x.jpg?v=1664254563');
-            background-size: cover;
-            background-position: center;
-            padding: 80px 0;
-            color: white;
-            font-size: 24px;
-        }
-        .content {
-            background-color: #fff;
-            padding: 30px;
-            margin: 20px;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-        footer {
-            background-color: #f7c600;
-            padding: 15px 0;
-            color: #fff;
-            font-size: 14px;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>CARTA 21 de MARZO</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Flores Amarillas para Ti</h1>
-    </header>
 
-    <section class="flowers">
-        <p>¡Feliz 21 de marzo! Hoy celebramos el amor y la belleza, como estas hermosas flores amarillas que representan alegría y nuevos comienzos. 🌼</p>
-    </section>
+<div class="valentines-day">
+  <div class="envelope"></div>
+  <div class="heart"></div>
+  <div class="text"> PARA: <br> Mi amorcito Fernanda </div>
+  <div class="front"></div>
+</div>
 
-    <div class="content">
-        <h2>Mi amor,</h2>
-        <p>Este día es muy especial para mí, porque es una oportunidad más para decirte lo importante que eres en mi vida. Las flores amarillas me hacen pensar en ti, en la luz que traes a mi mundo y en los momentos felices que compartimos. Gracias por todo lo que haces, por tu amor y por tu compañía.</p>
-        <p>Te amo mucho. 💛</p>
-    </div>
+<div id="card">
+  <div class="side one"></div>
+  <div class="side two">
+    <h2>Para mi amorcito</h2>
+    <p>Querida Fernanda... </p>
+    <p>Cada dia que paso a tu lado me siento afortunado, como si estuviera rodeado de un jardin lleno de colores y aromas, </p>
+    <p>Las flores amarillas, como nuestro amor, son calidas, llenas de vida, y siempre buscan la luz, asi como tu iluminas mis dias y mi corazon. Y el tuyo es el mas hermoso de todos</p>
+    <p>Te amo con todo mi ser, y deseo que este dia sea tan especial como tu lo eres para mi. Con todo mi amor, tu amorcito Alonso.</p>
+</div>
+</div>
 
-    <footer>
-        <p>Con cariño, tu Alonso</p>
-    </footer>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="script.js"></script>
+
 </body>
 </html>
